fix:overlape screen mobile device

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,7 +80,7 @@
     padding: 0;
   }
   .productCarousel.carousel-root .carousel {
-    width: 400px;
+    width: 320px;
     height: 320px;
     border-radius: 10px;
   }
